Removed tabs used for debugging and replaced deprecated functions.